[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nanovllm"
version = "0.1.0"
description = "a simple vllm implementation from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "xxhash>=3.6.0",
    "flash-attn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]
